Fix app layout problem in front page when two-line app name

--- a/ubos-admin/www/_common/css/default.css
+++ b/ubos-admin/www/_common/css/default.css
@@ -42,11 +42,11 @@ a img {
 div.apps {
     clear: both;
 }
-div.apps > a,
-div.apps > div {
+div.apps > a {
     display: block;
     float: left;
     margin: 20px 10px;
+    height: 120px;
     width: 120px;
 }
 div.app > div.icon {
